--- a/css/styles.css
+++ b/css/styles.css
@@ -126,10 +126,27 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-link:hover,
 .menu-link:focus {
   color: #404bbf;
+}
+.current {
+  position: relative;
+}
+.current::after {
+  content: "";
+  display: block;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  background: #404bbf;
+
+  position: absolute;
+  left: 0;
+  bottom: -1px;
 }
 .address {
   font-style: normal;
@@ -146,6 +163,8 @@ p {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,
 .address-link:focus {
@@ -155,9 +174,19 @@ p {
 
 /* Hero section styles */
 .hero {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office-hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .hero-title {
   max-width: 496px;
@@ -186,6 +215,8 @@ p {
   letter-spacing: 0.04em;
   color: #fff;
   background: #4d5ae5;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -206,7 +237,19 @@ p {
   margin-bottom: 8px;
 }
 /* /Benefits section styles */
+.benefits-icon-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-bottom: 8px;
+
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background: #f4f4fd;
+}
 /* Team section styles */
 .team {
   background-color: #f4f4fd;
@@ -228,9 +271,31 @@ p {
   flex-basis: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
   background-color: #ffffff;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .team-text {
   text-align: center;
+  margin-bottom: 8px;
+}
+.social-media-list {
+  display: flex;
+  justify-content: center;
+  column-gap: 24px;
+}
+.social-media-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-media-item:hover,
+.social-media-item:focus {
+  background-color: #31d0aa;
 }
 /* /Team section styles */
 
@@ -243,8 +308,12 @@ p {
 }
 .portfolio-item {
   flex-basis: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.portfolio-item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
 .portfolio-content-box {
   padding: 32px 16px;
   border-bottom: 1px solid #e7e9fc;
@@ -254,7 +323,32 @@ p {
 .portfolio-title {
   margin-bottom: 8px;
 }
+.portfolio-overlay-box {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  background: #4d5ae5;
+}
+.portfolio-item:hover .portfolio-overlay {
+  transform: translateY(0);
+}
+.overlay-text {
+  padding: 40px 32px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
 /* /Portfolio section styles */
 
 /* Footer styles */
@@ -278,5 +372,33 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+.footer-media-list {
+  display: flex;
+  justify-content: center;
+  column-gap: 16px;
+}
+.footer-media-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.footer-media-text {
+  margin-bottom: 16px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
+.container.footer-container {
+  display: flex;
+  column-gap: 120px;
+  align-items: first baseline;
 }
 /* /Footer styles */
