--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,7 @@ p {
 }
 .social-media-link:hover,
 .social-media-link:focus {
-  background-color: #31d0aa;
+  background-color: #404bbf;
 }
 .social-media-icon {
   fill: #f4f4fd;
@@ -404,6 +404,7 @@ p {
   align-items: center;
   border-radius: 50%;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-media-link:hover,
 .footer-media-link:focus {
